--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .App {
-  background-color: #79a8a9;  
-  font-family: 'Anton', sans-serif;
+  background-color: #bcd1d1;  
+  font-family: 'Anton', FANGSONG;
   min-height: 800px;
   color:#1f4e5f;
   background-image: './svg/map.png';
 }
 .header
 {
-  background-color: #689d9e ;
+  background-color: #bcd1d1 ;
   
 }
 .mine_home_div
@@ -55,14 +55,19 @@
 }
 .con
 {
-  background-color: #aacfd0;
+  box-shadow: 1px 2px 4px 0 #1f4e5f, 0 1px 14px 4px #1f4e5f;
+
   margin-bottom:50px ;
   border-radius: 10px;
 }
+.divL
+{
+  box-shadow: 1px 2px 4px 0 #1f4e5f, 0 1px 14px 4px #1f4e5f;
+}
 svg
 {
-  width: 264px;
-  height: 200px;
+  max-width:464px;
+  max-height: 400px;
 }
 .form_
 {
@@ -128,7 +133,7 @@ p h5
 {
   padding-top: 10px;
   color: #aacfd0;
-  margin: auto 20px;
+  margin: auto 32px;
   transition:all .2s ease-in-out;
   text-decoration:none;
   text-decoration-line: none;
@@ -160,7 +165,6 @@ p h5
   text-align: left;
   margin: 15px;
   padding: 40px;
-  background-color: #c3dfe0;
   border-radius:15px ;
   overflow-x: auto;
 }
@@ -196,4 +200,38 @@ img
   width : 100%;
   height: 300px;
   border-radius:15px ;
+}
+.loading {
+  top: 0px;
+  left: 0px;
+  background-color: rgb(0 0 0 / 40%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  height: calc(100% + 91px);
+  position: fixed;
+  margin-top: -91px;
+  width: 100%;
+  padding: 0; 
+}
+
+.btn-outline-primary {
+  --bs-btn-color: #1f4e5f;
+  --bs-btn-border-color: #1f4e5f;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #1f4e5f;
+  --bs-btn-hover-border-color: #1f4e5f;
+  --bs-btn-focus-shadow-rgb: 13,110,253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #1f4e5f;
+  --bs-btn-active-border-color: #1f4e5f;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #1f4e5f;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #1f4e5f;
+  --bs-gradient: none;
+  min-height: 46px;
+  font-size: 20px;
+  border-radius:25px ;
 }
